# fabry

./: CMakeLists.txt  README.md  fabry.pc
include/fabry/: fabry.hpp  internal-icb.hpp
lib/: fabry.cpp
